Update NapCat doc URL in 消息平台.md

--- a/docs/开始上手/消息平台.md
+++ b/docs/开始上手/消息平台.md
@@ -20,7 +20,7 @@ slug: /get-started/platform
 
 有关如何在 NapCat/Lagrange.OneBot/go-cqhttp/shamrock 中配置反向 Websocket 的 host 和 port，请查阅其官方网站。
 
-- NapCat: [点击查看](https://napneko.github.io/zh-CN/guide/getting-started)
+- NapCat: [点击查看](https://napcat.napneko.icu/config/basic)
 - Lagrange.OneBot: [点击查看](https://lagrangedev.github.io/Lagrange.Doc/Lagrange.OneBot/Config/#%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6)
 - Shamrock: [点击查看](https://whitechi73.github.io/OpenShamrock/guide/configuration.html#%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6)
 - go-cqhttp: [点击查看](https://docs.go-cqhttp.org/guide/config.html#%E9%85%8D%E7%BD%AE%E4%BF%A1%E6%81%AF)
